--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "expo-camera": "~16.0.10",
-    "expo-updates": "~0.26.10"
+    "expo-updates": "~0.26.10",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
